fix layout, control z-index.

--- a/src/app/data/data.component.css
+++ b/src/app/data/data.component.css
@@ -65,6 +65,10 @@ img.data {
     width: 100%;
 }
 
+.absolute {
+    position: absolute;
+}
+ 
 .z-1 {
-    z-index: 1;
+    z-index: -10;
 }
