--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -1,7 +1,7 @@
 div {
     line-height: 1.4;
     font-size: 1.3rem;
-    padding: .6rem 0;
+    padding: .4rem 0;
     text-align: center;
     width: 100%;
 }
